src/css/button.css
/*
* Meshki v0.5.2
* Copyright 2016, Mohammad reza Hajianpour <me@borderliner.ir>
* http://meshki.borderliner.ir/
* Free to use under the MIT license.
* https://opensource.org/licenses/MIT
*/

/* Buttons
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* Removed focus outlines, especially in Firefox */
a.button:focus,
button:focus,
input[type="submit"]:focus,
input[type="reset"]:focus,
input[type="button"]:focus {
  outline: 0 !important;
}

/* Simple button, with no style */
a.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
  cursor: pointer;
  margin: 5px !important;
  border-radius: 5px;
  text-decoration: none;
  padding: 8px 10px;
  transition: .3s;
  font-size: 1.6rem;
  -webkit-transition: .3s;
  -moz-transition: .3s;
  -o-transition: .3s;
  display: inline-block;
  background-color: transparent;
  color: #E1E1E1;
  border: 2px solid #E1E1E1;
  line-height: normal !important; /* Fix Midori bug */
}

a.button.small,
button.small,
input[type="submit"].small,
input[type="reset"].small,
input[type="button"].small {
  font-size: 1.2rem;
}

a.button.medium,
button.medium,
input[type="submit"].medium,
input[type="reset"].medium,
input[type="button"].medium {
  font-size: 1.6rem;
}

a.button.large,
button.large,
input[type="submit"].large,
input[type="reset"].large,
input[type="button"].large {
  font-size: 2.2rem;
}

/* Simple button's hover */
a.button:hover,
button:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover {
  background-color: #E1E1E1;
  color: #000;
}

/* Default blue button */
a.button.default,
button.default,
input[type="submit"].default,
input[type="reset"].default,
input[type="button"].default {
  border: 2px #55acee solid;
  color: #55acee;
}

/* Default blue button's hover */
a.button.default:hover,
button.default:hover,
input[type="submit"].default:hover,
input[type="reset"].default:hover,
input[type="button"].default:hover {
  background-color: #55acee;
  color: #fff
}

/* Success green button */
a.button.success,
button.success,
input[type="submit"].success,
input[type="reset"].success,
input[type="button"].success {
  border: 2px #2ecc71 solid;
  color: #2ecc71;
}

/* Success green button's hover */
a.button.success:hover,
button.success:hover,
input[type="submit"].success:hover,
input[type="reset"].success:hover,
input[type="button"].success:hover {
  background-color: #2ecc71;
  color: #fff;
}

/* Danger red button */
a.button.danger,
button.danger,
input[type="submit"].danger,
input[type="reset"].danger,
input[type="button"].danger {
  border: 2px #e74c3c solid;
  color: #e74c3c;
}

/* Danger red button's hover */
a.button.danger:hover,
button.danger:hover,
input[type="submit"].danger:hover,
input[type="reset"].danger:hover,
input[type="button"].danger:hover {
  background-color: #e74c3c;
  color: #fff;
}

/* Warning orange button */
a.button.warning,
button.warning,
input[type="submit"].warning,
input[type="reset"].warning,
input[type="button"].warning {
  border: 2px #e67e22 solid;
  color: #e67e22;
}

/* Warning orange button's hover */
a.button.warning:hover,
button.warning:hover,
input[type="submit"].warning:hover,
input[type="reset"].warning:hover,
input[type="button"].warning:hover {
  background-color: #e67e22;
  color: #fff;
}

.button-couple button:not(:first-child):not(:last-child),
.button-couple a:not(:first-child):not(:last-child) {
  pointer-events: none;
  border-style: none;
  border-radius: 0;
  display: block;
  margin: -4px !important;
}

@media (min-width: 768px) {
  .button-couple button:first-child,
  .button-couple a:first-child {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    margin-right: 0 !important;
  }

  .button-couple button:not(:first-child):not(:last-child),
  .button-couple a:not(:first-child):not(:last-child) {
    pointer-events: none;
    border-style: solid;
    border-right: 0;
    border-left: 0;
    border-radius: 0;
    display: inline;
    margin: -4px !important;
  }

  .button-couple button:last-child,
  .button-couple a:last-child {
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    margin-left: 0 !important;
  }
}

